# plm_fact

./: .gitignore  README.md  esm.md  pyproject.toml  rosetta.md
.github/workflows/: ci.yml
plm_fact/: __init__.py  _version.py
plm_fact/data/: __init__.py  _data_paths.py  offset_s3_loader.py
plm_fact/models/: __init__.py
plm_fact/models/sparse_code/: model.py
plm_fact/models/sparse_code/_external/: README.md  sparsify_PyTorch.py
scripts/data_prep/: access_s3_demo.py  embeddings_from_rosetta.py
tests/: test_data.py
